fix: proyecto inicial

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.CBD</groupId>
-	<artifactId>Videojuegos</artifactId>
+	<artifactId>videojuego</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Videojuegos</name>
-	<description>CBD mongoDB project</description>
+	<name>videojuego</name>
+	<description>CBDproject</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -23,12 +23,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-                <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-thymeleaf</artifactId>
-                </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
