--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.data.mongodb.database=Videojuegos
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
